--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# API Gateway Configuration
 spring.application.name=api-gateway
+server.port=8080
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
+# Gateway Routes Configuration (will be defined programmatically)
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info,metrics,gateway
+management.endpoint.health.show-details=always
+
+# Logging
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.web.reactive=DEBUG
