feat: refactor authentication mechanism to use username/password; remove JWT dependencies and refresh token logic

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -18,10 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
-# JWT Configuration
-jwt.secret=mySecretKey123456789012345678901234567890
-jwt.access-token-expiration=3600000
-jwt.refresh-token-expiration=86400000
+# JWT Configuration removed - using username/password authentication
 
 # Actuator endpoints
 management.endpoints.web.exposure.include=health,info,metrics
