--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -61,24 +61,7 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
-        <!-- JWT Dependencies for token validation -->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-api</artifactId>
-            <version>0.12.3</version>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-impl</artifactId>
-            <version>0.12.3</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId>
-            <version>0.12.3</version>
-            <scope>runtime</scope>
-        </dependency>
+        <!-- JWT Dependencies removed - using username/password authentication instead -->
 
         <dependency>
             <groupId>com.mysql</groupId>
