refactor: remove unused Auth Service URL and validation logic from PostService

--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 # Auth Service URL for RestTemplate calls
-auth.service.url=http://localhost:8081
+# auth.service.url=http://localhost:8081
 
 # Actuator endpoints
 management.endpoints.web.exposure.include=health,info,metrics
