--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8081
 spring.application.name=api-gateway
+
+# Eureka client configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# API Gateway routes
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes[0].id=auth-service
+spring.cloud.gateway.routes[0].uri=lb://auth-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+
+spring.cloud.gateway.routes[1].id=post-service
+spring.cloud.gateway.routes[1].uri=lb://post-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/posts/**
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info,gateway
+management.info.env.enabled=true
