--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.wait-time-in-ms-when-sync-empty=0
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
