--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+server.port=8083
 spring.application.name=post-service
+
+# Eureka client configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3309/postdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# JWT configuration
+jwt.secret=YourSecretKey
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
