--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=post-service
 
 # Eureka client configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
 
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3309/postdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
@@ -12,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # JWT configuration
-jwt.secret=YourSecretKey
+jwt.secret=S3JldmluZGlhczIwMjgtMDktMTVUMTI6MzQ6NTYrandvbGRrZXk=
 
 # Actuator endpoints
 management.endpoints.web.exposure.include=health,info
