feat: Add migration state services and update comment service endpoints with JWT authentication

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.cloud.gateway.routes[1].id=post-service
 spring.cloud.gateway.routes[1].uri=lb://post-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/posts/**
 
+spring.cloud.gateway.routes[2].id=comment-service
+spring.cloud.gateway.routes[2].uri=lb://comment-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/comments/**
+
 # Actuator endpoints
 management.endpoints.web.exposure.include=health,info,gateway
 management.info.env.enabled=true
