--- a/comment-service/src/main/resources/application.properties
+++ b/comment-service/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8084
 spring.application.name=comment-service
+
+# Eureka client configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3309/commentdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# JWT configuration
+jwt.secret=S3JldmluZGlhczIwMjgtMDktMTVUMTI6MzQ6NTYrandvbGRrZXk=
+jwt.expiration=86400000
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
