feat: remove commented config server import from application.yml files for auth, comment, notification, and post services feat: add DNS configuration to docker-compose for all services

--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 spring:
   application:
     name: auth-service
-  config:
-    # Explicitly import configuration from the Config Server
-    import: configserver:http://localhost:8888 # Combines import and URI
+  # config:
+  #   # Explicitly import configuration from the Config Server
+  #   import: configserver:http://localhost:8888 # Combines import and URI
 
 # Eureka Client Configuration (Needed during bootstrap)
 eureka:
