--- a/k8s/02-config-server-deployment.yml
+++ b/k8s/02-config-server-deployment.yml
@@ -38,3 +38,5 @@ spec:
           env:
             - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
               value: "http://eureka-server:8761/eureka/"
+            - name: EUREKA_CLIENT_RETRY_ENABLED
+              value: "true"
