--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.application.name=api-gateway
 
 # Eureka client configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 
 # API Gateway routes
 spring.cloud.gateway.discovery.locator.enabled=true
