--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -4,13 +4,13 @@ spring:
     name: post-service
   # config:
   #   # Explicitly import configuration from the Config Server
-  #   import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
 
 # Eureka Client Configuration (Needed during bootstrap)
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
   instance:
     hostname: localhost
 
