--- a/k8s/01-eureka-server-deployment.yml
+++ b/k8s/01-eureka-server-deployment.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
         - name: eureka-server
-          image: ammare03/eureka-server:latest
+          image: 457795063740.dkr.ecr.us-east-1.amazonaws.com/eureka-server:latest
           ports:
             - containerPort: 8761
           imagePullPolicy: Always
