--- a/k8s/02-config-server-deployment.yml
+++ b/k8s/02-config-server-deployment.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
         - name: config-server
-          image: ammare03/bloghive-config-server:latest
+          image: 457795063740.dkr.ecr.us-east-1.amazonaws.com/bloghive-config-server:latest
           ports:
             - containerPort: 8888
           imagePullPolicy: Always
