--- a/k8s/04-api-gateway-deployment.yml
+++ b/k8s/04-api-gateway-deployment.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: ammare03/api-gateway:latest
+          image: 457795063740.dkr.ecr.us-east-1.amazonaws.com/api-gateway:latest
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
